--- a/test-snap-12/snapcraft.yaml
+++ b/test-snap-12/snapcraft.yaml
@@ -3,6 +3,12 @@ version: "0.1"
 summary: The most important snap of the snap universe
 description: |
   This snap will be THE snap that will change everything
+
+architectures:
+  - build-on: i386
+  - build-on: amd64
+  - build-on: arm64
+
 parts:
   my-part:
     # See 'snapcraft plugins'
